RAB-1274: Add ServiceAPI for DQI Attribute Groups Activation

--- a/src/Akeneo/Pim/Structure/Bundle/Resources/config/queries.yml
+++ b/src/Akeneo/Pim/Structure/Bundle/Resources/config/queries.yml
@@ -205,3 +205,4 @@ services:
         arguments:
             - '@database_connection'
             - '@feature_flags'
+            - '@Akeneo\Pim\Automation\DataQualityInsights\PublicApi\Query\AttributeGroup\GetAttributesGroupActivationQuery'
