--- a/components/identifier-generator/back/src/Infrastructure/Symfony/Resources/config/command_handlers.yml
+++ b/components/identifier-generator/back/src/Infrastructure/Symfony/Resources/config/command_handlers.yml
@@ -26,3 +26,4 @@ services:
   Akeneo\Pim\Automation\IdentifierGenerator\Application\Update\UpdateNomenclatureValuesHandler:
     arguments:
       - '@Akeneo\Pim\Automation\IdentifierGenerator\Domain\Repository\NomenclatureValueRepository'
+      - '@Akeneo\Pim\Automation\IdentifierGenerator\Domain\Repository\NomenclatureDefinitionRepository'
