CPM-944: Add Controller and EndToEnd

--- a/components/identifier-generator/back/src/Infrastructure/Symfony/Resources/config/controllers.yml
+++ b/components/identifier-generator/back/src/Infrastructure/Symfony/Resources/config/controllers.yml
@@ -51,3 +51,8 @@ services:
       - '@Akeneo\Pim\Structure\Component\Query\PublicApi\Attribute\GetGroupedAttributes'
       - '@pim_user.context.user'
       - '@translator'
+
+  Akeneo\Pim\Automation\IdentifierGenerator\Infrastructure\Controller\UpdateNomenclatureController:
+    public: true
+    arguments:
+      - '@Akeneo\Pim\Automation\IdentifierGenerator\Application\Update\UpdateNomenclatureHandler'
