--- a/.circleci/jobs/features/other.yml
+++ b/.circleci/jobs/features/other.yml
@@ -232,16 +232,8 @@ jobs:
                         APP_ENV=test C='mysql elasticsearch object-storage pubsub-emulator' make up
                         docker/wait_docker_up.sh
             -   run:
-                    name: Restore permissions on files
-                    command: git checkout -- .
-            -   run:
-                    name: Restore permissions on vendor files
-                    command: |
-                        cd vendor/akeneo/pim-community-dev
-                        git checkout -- .
-            -   run:
                     name: Change owner on project dir after restoring cache
-                    command: sudo chown -R 1000:1000 ../project
+                    command: sudo chown -R circleci:circleci ../project
             -   run:
                     name: Test missing database and index structure migrations
                     command: vendor/akeneo/pim-community-dev/.circleci/detect_structure_changes.sh $CIRCLE_BRANCH
