--- a/.circleci/jobs/features/other.yml
+++ b/.circleci/jobs/features/other.yml
@@ -235,6 +235,11 @@ jobs:
                     name: Change owner on project dir after restoring cache
                     command: sudo chown -R circleci:circleci ../project
             -   run:
+                    name: Unshallow project
+                    command: |
+                        git config remote.origin.fetch "+refs/heads/*:refs/remotes/origin/*"
+                        git fetch origin
+            -   run:
                     name: Test missing database and index structure migrations
                     command: vendor/akeneo/pim-community-dev/.circleci/detect_structure_changes.sh $CIRCLE_BRANCH
 
