--- a/.circleci/jobs/features/other.yml
+++ b/.circleci/jobs/features/other.yml
@@ -223,6 +223,9 @@ jobs:
         machine:
             image: *executor-machine
         steps:
+            -   add_ssh_keys:
+                    fingerprints:
+                        - "ee:73:a1:e4:ef:57:13:9e:cf:d3:23:fb:e2:c1:d7:92"
             -   attach_workspace:
                     at: ~/
             -   run:
@@ -237,6 +240,7 @@ jobs:
             -   run:
                     name: Unshallow project
                     command: |
+                        export GIT_SSH_COMMAND='ssh -i ~/.ssh/id_rsa_ee73a1e4ef57139ecfd323fbe2c1d792 -o UserKnownHostsFile=~/.ssh/known_hosts -o IdentitiesOnly=Yes'
                         git config remote.origin.fetch "+refs/heads/*:refs/remotes/origin/*"
                         git fetch origin
                         git reset --hard
