GRF-623 : Clean category date on locale deactivation

--- a/src/Akeneo/Category/back/Infrastructure/Symfony/Resources/config/jobs.yml
+++ b/src/Akeneo/Category/back/Infrastructure/Symfony/Resources/config/jobs.yml
@@ -26,6 +26,7 @@ services:
 
     Akeneo\Category\Infrastructure\Job\CleanCategoriesEnrichedValuesTasklet:
         arguments:
+            - '@pim_catalog.repository.channel'
             - '@Akeneo\Category\Application\Enrichment\CleanCategoryDataLinkedToChannel'
 
     # job parameters
